[package]
name = "aws-ip-ranges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
reqwest = { version = "0.11.17", features = [ "blocking", "json" ] }
serde = { version = "1.0.162", features = ["derive"] }
structopt = "0.3.26"
